--- a/composer.json
+++ b/composer.json
@@ -66,7 +66,7 @@
         ]
     },
     "provide": {
-        "phpunit/phpunit": "*"
+        "phpunit/phpunit": "4.8.36"
     },
     "replace": {
         "phpunit/phpunit": "*"
