--- a/composer.json
+++ b/composer.json
@@ -66,7 +66,7 @@
         ]
     },
     "replace": {
-        "phpunit/phpunit": "^4.8"
+        "phpunit/phpunit": "self.version"
     },
     "extra": {
         "branch-alias": {
