--- a/.travis.yml
+++ b/.travis.yml
@@ -5,12 +5,12 @@ addons:
     packages:
       - libxml2-utils
 php:
-  - 5.6
-  - "7.0"
-  - "7.1"
-  - "7.2"
-  - "7.3"
-  - "7.4"
+  # - 5.6
+  # - "7.0"
+  # - "7.1"
+  # - "7.2"
+  # - "7.3"
+  # - "7.4"
   - "nightly"
 
 env:
@@ -21,26 +21,26 @@ env:
 matrix:
    fast_finish: true
    include:
-     - php: 5.3
-       dist: precise
-       env: DEPENDENCIES="high"
-     - php: 5.3
-       dist: precise
-       env: DEPENDENCIES="low"
-     - php: 5.4
-       dist: trusty
-       env: DEPENDENCIES="high"
-     - php: 5.4
-       dist: trusty
-       env: DEPENDENCIES="low"
-     - php: 5.5
-       dist: trusty
-       env: DEPENDENCIES="high"
-     - php: 5.5
-       dist: trusty
-       env: DEPENDENCIES="low"
+     # - php: 5.3
+     #   dist: precise
+     #   env: DEPENDENCIES="high"
+     # - php: 5.3
+     #   dist: precise
+     #   env: DEPENDENCIES="low"
+     # - php: 5.4
+     #   dist: trusty
+     #   env: DEPENDENCIES="high"
+     # - php: 5.4
+     #   dist: trusty
+     #   env: DEPENDENCIES="low"
+     # - php: 5.5
+     #   dist: trusty
+     #   env: DEPENDENCIES="high"
+     # - php: 5.5
+     #   dist: trusty
+     #   env: DEPENDENCIES="low"
    allow_failures:
-     - php: nightly
+     # - php: nightly
 
 dist: xenial
 sudo: false
